src/dashboard/sites/Sites.css
/* SITES */
.open{
  left: var(--sidebar-width-open);
  width: calc(100vw - 220px);

} 
.sites__wrapper {
  width: 100%;
  max-width: 1200px;
  padding: 24px;
  display: flex;
  flex-direction: column;
  gap: 24px;
  margin: 0 auto;
  background-color: #ffffff;
}

.sites__grid.grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 16px;
}
.sites__grid.list {
  display: flex;
  flex-direction: column;
  gap: 16px;
}


/* HEADER */
.sites__header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  width: 100%;
}

.sites__title {
  font-size: 24px;
  font-weight: 600;
  color: #111827;
  margin: 0;
}

/* Header buttons */
.sites__header-actions {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 5px;
}

.sites__new-button {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 5px;
  padding: 7px;
  background-color: var(--background-color-blue);
  color: #ffffff;
  font-size: 14px;
  font-weight: 500;
  border: none;
  border-radius: 8px;
  cursor: pointer;
  transition: background-color 0.2s;
}
.sites__new-button:hover {
  background-color: var(--btn-bg-hover);
}
.sites__new-button svg {
  color: #ffffff;
  width: 14px;
  height: 14px;
}

/* SITES */
@media (max-width: 767px){
  .open{
    left: 0px;
    width: 100%;
 } 

}
/* Mobile */
@media (max-width: 480px) {
  .sites__title {
    font-size: 22px;
  }
  .sites__new-button {
    font-size: 12px;
  }

}

